# CollecteBall

./: .gitignore  Carac_robot.md  Nouvelles_specs.md  README.md  Sujet.md  Sujet_IS_3A.md  TODO_fin_12_01.txt
.github/workflows/: tennis-court-foxy.yaml  tennis_court-foxy.yaml
Gillou/: CMakeLists.txt  package.xml
Gillou/launch/: display.launch.py
bot_spawn/: CMakeLists.txt  package.xml
bot_spawn/launch/: spawner.launch.py
docs/: GithubActions.md  Lint.md  Linters.md
gillou/: CMakeLists.txt  package.xml
gillou/config/: joint_control.yalm  joint_control.yaml  ps4.config.yaml
gillou/description inventor/: pelle.dae  robot.iam
gillou/description_inventor/: README.md  pelle.iam  robot.dae
gillou/launch/: cmd_launch.py  display.launch.py
gillou/scripts/: ball_order.py  control_joystick.py  decision.py  detec_ball.py  detec_robot.py  joy_sub.py  orientation_robot.py  pelle.py
gillou/src/: decision.py
gillou/src/description/: gillou.urdf  gillou_laurent.urdf
gillou/src/description/description_inventor/: robot.dae
gillou/visuel_autodesk/: robot.iam
reports/: 01_Debrief.md  01_Goals.md  02_Debrief.md  02_Goals.md  03_Debrief.md  03_Goals.md  04_Debrief.md  04_Goals.md  05_Debrief.md  05_Goals.md  06_Debrief.md  06_Goals.md  07_Debrief.md  07_Goals.md  08_Debrief.md  08_Goals.md  09_Debrief.md  09_Goals.md  1_GoalsTemplate.md
tennis_bot_description/: CMakeLists.txt  package.xml
tennis_bot_description/launch/: display.launch.py
tennis_court/: CMakeLists.txt  README.md  package.xml
tennis_court/launch/: tennis_court.launch.py
(+5 files in other folders)
