<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gillou</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="laurent.potin@ensta-bretagne.org">potinl</maintainer>
  <license>TODO: License declaration</license>

<exec_depend>joint_state_publisher</exec_depend>
<exec_depend>robot_state_publisher</exec_depend>
<exec_depend>rviz</exec_depend>
<exec_depend>xacro</exec_depend>
<exec_depend>robot_localization</exec_depend>
<exec_depend>rclpy</exec_depend>
<exec_depend>std_msgs</exec_depend>
<exec_depend>sensor_msgs</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

<buildtool_depend>ament_cmake</buildtool_depend>
<test_depend>ament_cmake_mypy</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
